libs/natparse/src/test/resources/projects/invalidModuleTypeTests/Natural-Libraries/ALIB/CALLSUB.NSN
DEFINE DATA LOCAL
END-DEFINE

CALLNAT 'CALLPROG'

END
